--- a/index.html
+++ b/index.html
@@ -8,46 +8,83 @@
 </head>
 <body>
 
+  <!-- Header -->
   <header>
     <div class="navbar">
       <div class="logo">amazon<span>.in</span></div>
-      <input type="text" placeholder="Search Amazon.in" class="search-bar" />
-      <button class="search-btn">Search</button>
+      <div class="search-box">
+        <input type="text" placeholder="Search Amazon.in" class="search-bar" />
+        <button class="search-btn">Search</button>
+      </div>
       <div class="nav-links">
         <a href="#">Sign In</a>
-        <a href="#">Returns & Orders</a>
+        <a href="#">Orders</a>
         <a href="#">Cart</a>
       </div>
     </div>
   </header>
 
-  <main>
-    <section class="hero">
-      <h1>Welcome to Amazon</h1>
-      <p>Shop top deals of the day</p>
-    </section>
+  <!-- Hero Section -->
+  <section class="hero">
+    <h1>Welcome to Amazon Clone</h1>
+    <p>Shop top deals of the day</p>
+  </section>
 
-    <section class="products">
-      <div class="product-card">
-        <img src="https://via.placeholder.com/150" alt="Product 1" />
-        <h3>Product 1</h3>
-        <p>₹999</p>
-      </div>
-      <div class="product-card">
-        <img src="https://via.placeholder.com/150" alt="Product 2" />
-        <h3>Product 2</h3>
-        <p>₹1,499</p>
-      </div>
-      <div class="product-card">
-        <img src="https://via.placeholder.com/150" alt="Product 3" />
-        <h3>Product 3</h3>
-        <p>₹799</p>
-      </div>
-    </section>
-  </main>
+  <!-- Product Section -->
+  <section class="products">
+    <div class="product-card">
+      <img src="https://via.placeholder.com/200x200?text=Smartwatch" alt="Product 1" />
+      <h3>Noise Smartwatch</h3>
+      <p>₹2,999</p>
+      <button>Add to Cart</button>
+    </div>
+    <div class="product-card">
+      <img src="https://via.placeholder.com/200x200?text=Phone" alt="Product 2" />
+      <h3>Samsung Galaxy M13</h3>
+      <p>₹11,499</p>
+      <button>Add to Cart</button>
+    </div>
+    <div class="product-card">
+      <img src="https://via.placeholder.com/200x200?text=Speaker" alt="Product 3" />
+      <h3>Echo Dot (4th Gen)</h3>
+      <p>₹3,499</p>
+      <button>Add to Cart</button>
+    </div>
+    <div class="product-card">
+      <img src="https://via.placeholder.com/200x200?text=Headphones" alt="Product 4" />
+      <h3>boAt Rockerz 450</h3>
+      <p>₹1,299</p>
+      <button>Add to Cart</button>
+    </div>
+    <div class="product-card">
+      <img src="https://via.placeholder.com/200x200?text=TV" alt="Product 5" />
+      <h3>Mi 43" Smart TV</h3>
+      <p>₹24,999</p>
+      <button>Add to Cart</button>
+    </div>
+    <div class="product-card">
+      <img src="https://via.placeholder.com/200x200?text=Laptop" alt="Product 6" />
+      <h3>HP Pavilion Laptop</h3>
+      <p>₹54,999</p>
+      <button>Add to Cart</button>
+    </div>
+    <div class="product-card">
+      <img src="https://via.placeholder.com/200x200?text=Camera" alt="Product 7" />
+      <h3>Canon DSLR Camera</h3>
+      <p>₹38,999</p>
+      <button>Add to Cart</button>
+    </div>
+    <div class="product-card">
+      <img src="https://via.placeholder.com/200x200?text=Microwave" alt="Product 8" />
+      <h3>Samsung Microwave</h3>
+      <p>₹9,999</p>
+      <button>Add to Cart</button>
+    </div>
+  </section>
 
+  <!-- Footer -->
   <footer>
-    <p>© 2025 Amazon Clone by Student</p>
+    <p>© 2025 Amazon Clone Project | Created by Student</p>
   </footer>
 
 </body>
